--- a/configs/pedes_baseline/pa100k.yaml
+++ b/configs/pedes_baseline/pa100k.yaml
@@ -1,9 +1,10 @@
 NAME: 'resnet50.base.adam'
 
 DATASET:
-  VAL_SPLIT: test
   TYPE: 'pedes'
   NAME: 'PA100k'
+  TRAIN_SPLIT: 'trainval'
+  VAL_SPLIT: 'test'
   ZERO_SHOT: False
   LABEL: 'eval'
   HEIGHT: 256
@@ -15,7 +16,11 @@ RELOAD:
 
 BACKBONE:
   TYPE: 'resnet50'
-#  TYPE: 'convnext'
+#  TYPE: 'bninception'
+#  TYPE: 'tresnetM'
+#  TYPE: 'swin_s'
+#  TYPE: 'vit_s'
+#  TYPE: 'vit_b'
 
 CLASSIFIER:
   NAME: 'linear'
@@ -28,23 +33,19 @@ LOSS:
   LOSS_WEIGHT: [1]
   SAMPLE_WEIGHT: 'weight'
 
+
 TRAIN:
-  MAX_EPOCH: 80
   CLIP_GRAD: True
   BATCH_SIZE: 128
   OPTIMIZER:
     TYPE: 'adam'
     WEIGHT_DECAY: 5e-4
   LR_SCHEDULER:
-  #for resnet50
-    LR_STEP: [7]
-  #for convnext
-  #  LR_STEP: [1]
-    TYPE: 'multistep'
+    TYPE: 'plateau'
     LR_FT: 0.0001
     LR_NEW: 0.0001
   EMA:
-    ENABLE: False
+    ENABLE: True
 
 METRIC:
   TYPE: 'pedestrian'
